[gd_scene load_steps=4 format=3 uid="uid://cn1gbabfjxn8q"]

[ext_resource type="Script" path="res://Scripts/Scene Scripts/InventorySlot.gd" id="1_147pf"]
[ext_resource type="Texture2D" uid="uid://00eclibrv0qs" path="res://Pix n Stuff/In Use/Sulphur_R.png" id="2_1uf2m"]

[sub_resource type="LabelSettings" id="LabelSettings_tu8mh"]
font_size = 32
font_color = Color(0.707379, 0.984375, 1, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[node name="InventorySlot" type="Button"]
custom_minimum_size = Vector2(96, 96)
script = ExtResource("1_147pf")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_1uf2m")
expand_mode = 1

[node name="QuantityText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "99"
label_settings = SubResource("LabelSettings_tu8mh")
horizontal_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
